--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <h1>Enter Your Name</h1>
             <div class="input-container">
                 <input type="text" id="nameInput" placeholder="e.g., Priya" aria-label="Your name">
+                <select id="roleSelect" class="role-select">
+                    <option value="" disabled selected>Select your role</option>
+                    <option value="student">Student</option>
+                    <option value="teacher">Teacher</option>
+                </select>
                 <button id="openLetterBtn" class="primary-btn">
                     <span class="envelope-icon">✉️</span>
                     Open Letter
