Update website content 🎨

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Farewell Invitation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Crimson+Text:wght@400;600&family=Dancing+Script:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,6 +33,7 @@
     <!-- Letter Screen -->
     <div class="screen letter-screen hidden" id="letterScreen">
         <div class="gradient-bg"></div>
+        <div class="snow-container"></div>
         <div class="envelope-container">
             <div class="envelope">
                 <div class="letter">
@@ -79,6 +80,15 @@
 
     <!-- Particle Container -->
     <div class="particles-container"></div>
+
+    <!-- Info Box -->
+    <div class="info-box">
+        <div class="info-content">
+            <p class="info-title">✨ Created for:</p>
+            <p class="info-item">🎓 Batch: 2021 – 2025</p>
+            <p class="info-item">📘 Branch: ECE</p>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
