Update website content 🎨

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <p class="info-title">✨ Created for:</p>
             <p class="info-item">🎓 Batch: 2021 – 2025</p>
             <p class="info-item">📘 Branch: ECE</p>
+            <p class="info-footer">Made with ❤️ by your Juniors — Batch 2022–2026</p>
         </div>
     </div>
 
