Update website content 🎨

--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
         </div>
     </div>
 
+    <!-- Handwritten Message Animation -->
+    <div class="handwritten-container hidden" id="handwrittenContainer">
+        <div class="handwritten-message">
+            <div class="message-line" id="thankYou">Thank You</div>
+            <div class="message-line" id="missYou">We'll Miss You</div>
+            <div class="message-line" id="farewell">Farewell, Legends</div>
+            <div class="heart-emoji">❤️</div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html> 
